--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feedback</title>
+    <meta name="viewport" content="w<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">idth=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+   <title>Feedback</title>
 </head>
 <body>
 <div class="">
-    <div>
+    <div class="estrela">
         <img src="./images/icon-star.svg" alt="ícone de uma estrela laranja">
     </div>
     <h1>Como foi o atendimento?</h1>
@@ -15,7 +18,7 @@
          solicitação. Agradecemos muito seu feedback para <br> 
          podermos melhorar nosso atendimento! </p>
 
-         <div>
+         <div class="notas">
             <button>1</button>
             <button>2</button>
             <button>3</button>
