terceiro commit do CSS

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
    <title>Feedback</title>
 </head>
 <body>
-<div class="">
+<div class="card">
     <div class="estrela">
         <img src="./images/icon-star.svg" alt="ícone de uma estrela laranja">
     </div>
     <h1>Como foi o atendimento?</h1>
-    <p>Conte-nos como foi nossa ajuda com sua <br>
-         solicitação. Agradecemos muito seu feedback para <br> 
+    <p>Conte-nos como foi nossa ajuda com sua 
+         solicitação. Agradecemos muito seu feedback para 
          podermos melhorar nosso atendimento! </p>
 
          <div class="notas">
